; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/netronome/nfp/abm/extr_ctrl.c_nfp_abm_ctrl_read_params.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/netronome/nfp/abm/extr_ctrl.c_nfp_abm_ctrl_read_params.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nfp_abm_link = type { %struct.TYPE_2__*, i32 }
%struct.TYPE_2__ = type { i32 }

@NFP_NET_CFG_START_RXQ = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nfp_abm_ctrl_read_params(%struct.nfp_abm_link* %0) #0 {
  %2 = alloca %struct.nfp_abm_link*, align 8
  store %struct.nfp_abm_link* %0, %struct.nfp_abm_link** %2, align 8
  %3 = load %struct.nfp_abm_link*, %struct.nfp_abm_link** %2, align 8
  %4 = getelementptr inbounds %struct.nfp_abm_link, %struct.nfp_abm_link* %3, i32 0, i32 0
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %6 = load i32, i32* @NFP_NET_CFG_START_RXQ, align 4
  %7 = call i32 @nn_readl(%struct.TYPE_2__* %5, i32 %6)
  %8 = load %struct.nfp_abm_link*, %struct.nfp_abm_link** %2, align 8
  %9 = getelementptr inbounds %struct.nfp_abm_link, %struct.nfp_abm_link* %8, i32 0, i32 1
  store i32 %7, i32* %9, align 8
  %10 = load %struct.nfp_abm_link*, %struct.nfp_abm_link** %2, align 8
  %11 = getelementptr inbounds %struct.nfp_abm_link, %struct.nfp_abm_link* %10, i32 0, i32 0
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.nfp_abm_link*, %struct.nfp_abm_link** %2, align 8
  %16 = getelementptr inbounds %struct.nfp_abm_link, %struct.nfp_abm_link* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 8
  %18 = sdiv i32 %17, %14
  store i32 %18, i32* %16, align 8
  %19 = load %struct.nfp_abm_link*, %struct.nfp_abm_link** %2, align 8
  %20 = call i32 @nfp_abm_ctrl_prio_check_params(%struct.nfp_abm_link* %19)
  ret i32 %20
}

declare dso_local i32 @nn_readl(%struct.TYPE_2__*, i32) #1

declare dso_local i32 @nfp_abm_ctrl_prio_check_params(%struct.nfp_abm_link*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
